fixed navigation Link color  on mobile devices

--- a/src/styles/navbar-styles.css
+++ b/src/styles/navbar-styles.css
@@ -41,6 +41,19 @@ Link{
   background-size: cover;
 }
 
+#trending-mobile-link {
+  text-decoration: none;
+}
+
+#create-mobile-link{
+  text-decoration: none;
+}
+#support-mobile-link{
+  text-decoration: none;
+}
+#contact-mobile-link{
+  text-decoration: none;
+}
 
 @media (max-width: 767px) {
   nav {
